HBASE-1507  iCMS as default JVM
git-svn-id: https://svn.apache.org/repos/asf/hadoop/hbase/trunk@783990 13f79535-47bb-0310-9956-ffa450edef68